--- a/practicecss.css
+++ b/practicecss.css
@@ -1,46 +1,55 @@
-body
-    background: #222
+//Optional styles
 
-.skillbar
-    position: relative
-    display: block
-    width: 100%
-    margin-bottom: 30px
+body {
+  background-color: #f3f3f3;
+  padding-top: 3em;
+  font-family: Helvetica;
+  font-size: 13px;
+}
 
-.skillbar-bar:before
-    background: #111
-    content: ""
-    height: 3px
-    position: absolute
-    width: 100%
-    z-index: -1
+.page-wrap {
+  padding: 2em;
+  background-color: #fff;
+  width: 50%;
+  margin: 0 auto;
+}
 
-.skillbar-bar
-    height: 3px
-    width: 0px
-    background: #ccc
-    transition-property: width, background-color
+//The skill bars
 
-.skillbar-title
-    color: #999
-    font-size: 11px
-    font-weight: 600
-    text-transform: uppercase
-    display: inline-block
+$skill1: #d7edfa;
+$skill2: #c8e7f8;
+$skill3: #b9e0f7;
+$skill4: #a9d9f5;
+$skill5: #9ad3f3;
 
-.skill-bar-percent
-    float: right
-    display: inline-block
-    color: #999
-    font-size: 11px
-    font-weight: 600
-    text-transform: uppercase
-
-/* CENTERING ONLY */
-
-.wrapper
-    position: absolute
-    width: 80%
-    top: 50%
-    left: 50%
-    transform: translateX(-50%) translateY(-50%)
+.skill-bar-container {
+    position: relative;
+    width: 100%;
+    border-radius: 4px;
+    background-color: whitesmoke;
+    margin-bottom: 0.5em;
+    .skill-bar {
+        display: block;
+        border-radius: 4px;
+        height: 25px;
+        //background-color: $skillColor; //#d7edfa
+            &.level1 { width: 20%; background-color: $skill1}
+            &.level2 { width: 40%; background-color: $skill2}
+            &.level3 { width: 60%; background-color: $skill3}
+            &.level4 { width: 80%; background-color: $skill4}
+            &.level5 { width: 100%; background-color: $skill5 }
+    }
+    .skill-name {
+        position: absolute;
+        top: 5px;
+        left: 10px;
+        color: #333; //#333
+        //font-weight: 600;
+    }
+    .skill-percent {
+      position: absolute;
+      top: 5px;
+      right: 10px;
+      color: #999; //#333
+    }
+}
